--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.5",
+    "mongoose-paginate-v2": "^1.6.3",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
