--- a/package.json
+++ b/package.json
@@ -23,13 +23,12 @@
     "mongoose": "^5.13.5",
     "mongoose-paginate-v2": "^1.6.3",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.12"
-  },
-  "devDependencies": {
+    "nodemon": "^2.0.12",
     "@babel/cli": "^7.14.8",
     "@babel/core": "^7.14.8",
     "@babel/node": "^7.14.9",
     "@babel/plugin-transform-runtime": "^7.18.5",
     "@babel/preset-env": "^7.14.9"
-  }
+  },
+  "devDependencies": {}
 }
